removed android platform before checking in - add the platform again before trying out :-) ionic cordova platform add android

--- a/little_list/code/little_list/package.json
+++ b/little_list/code/little_list/package.json
@@ -9,7 +9,6 @@
         "gulp-sass": "^3.1.0"
     },
     "dependencies": {
-        "cordova-android": "^6.2.3",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.1",
@@ -24,8 +23,6 @@
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {}
         },
-        "platforms": [
-            "android"
-        ]
+        "platforms": []
     }
 }
